--- a/PharmacyManagementSystem/src/Design/PageDesign.css
+++ b/PharmacyManagementSystem/src/Design/PageDesign.css
@@ -16,6 +16,18 @@
     -fx-border-width: 1px;
 }
 
+.text-field-2{
+    -fx-border-color: white;
+    -fx-border-width: .3px;
+    -fx-font-family: Tahoma;
+}
+
+.text-field-3:focused{
+    -fx-border-color: linear-gradient(to bottom right,#A3D78A, #C1E59F);
+    -fx-border-width: 1px;
+
+}
+
 .btn-l{
     -fx-background-color: linear-gradient(to bottom right,#6bb548, #C1E59F);
     -fx-cursor: hand;
