--- a/PharmacyManagementSystem/src/main/resources/fr/ece/pharmacymanagementsystem/ClientPage.fxml
+++ b/PharmacyManagementSystem/src/main/resources/fr/ece/pharmacymanagementsystem/ClientPage.fxml
@@ -54,7 +54,7 @@
                   </ComboBox>
                   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="75.0" pickOnBounds="true" preserveRatio="true" styleClass="white-bg" AnchorPane.bottomAnchor="390.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="0.0">
                      <image>
-                        <Image url="@../../../../../../../../Downloads/Gemini_Generated_Image_s2sdf7s2sdf7s2sd-removebg-preview.png" />
+                        <Image url="@../../../photo/Gemini_Generated_Image_s2sdf7s2sdf7s2sd-removebg-preview.png" />
                      </image>
                   </ImageView>
                   <TextField fx:id="login_securityNumber" layoutX="53.0" layoutY="205.0" prefHeight="38.0" prefWidth="238.0" promptText="Security Number" styleClass="text-field" stylesheets="@../../../../../Design/PageDesign.css" />
