--- a/PharmacyManagementSystem/src/main/resources/fr/ece/pharmacymanagementsystem/MainForm.fxml
+++ b/PharmacyManagementSystem/src/main/resources/fr/ece/pharmacymanagementsystem/MainForm.fxml
@@ -27,7 +27,7 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.ece.pharmacymanagementsystem.UserDashboardControl">
    <children>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0">
+      <AnchorPane fx:id="main_form" prefHeight="200.0" prefWidth="200.0">
          <children>
             <BorderPane layoutX="289.0" layoutY="214.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <top>
@@ -47,32 +47,28 @@
                               <Font name="Arial Italic" size="14.0" />
                            </font>
                         </Label>
-                        <Label fx:id="dashboard_availableMed1" layoutX="1087.0" layoutY="10.0" prefHeight="21.0" prefWidth="18.0" text="X" textAlignment="RIGHT">
-                           <font>
-                              <Font name="Arial Narrow Bold" size="18.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="dashboard_availableMed11" layoutX="1057.0" layoutY="10.0" prefHeight="22.0" prefWidth="19.0" text="--" textAlignment="RIGHT">
-                           <font>
-                              <Font name="Arial Narrow Bold" size="18.0" />
-                           </font>
-                        </Label>
+                        <ImageView fitHeight="52.0" fitWidth="21.0" layoutX="1072.0" layoutY="10.0" onMouseClicked="#close" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../photo/Gemini_Generated_Image_a6ehi6a6ehi6a6eh-removebg-preview.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="52.0" fitWidth="21.0" layoutX="1036.0" layoutY="12.0" onMouseClicked="#minimize" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../photo/Gemini_Generated_Image_tvpk24tvpk24tvpk-removebg-preview.png" />
+                           </image>
+                        </ImageView>
                      </children>
                   </AnchorPane>
                </top>
                <left>
                   <AnchorPane prefHeight="526.0" prefWidth="220.0" style="-fx-background-color: d4d9d6;" stylesheets="@../../../../../Design/PageDesign.css" BorderPane.alignment="CENTER">
                      <children>
-                        <ImageView fitHeight="120.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../../../../../../Downloads/Gemini_Generated_Image_s2sdf7s2sdf7s2sd-removebg-preview.png" />
-                           </image>
-                        </ImageView>
+                        
                         <Label layoutX="104.0" layoutY="154.0" text="ID :" />
                         <Line endX="100.0" layoutX="110.0" layoutY="119.0" startX="-100.0" />
                         <ImageView fx:id="user_logo" fitHeight="89.0" fitWidth="89.0" layoutX="10.0" layoutY="130.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../../../../Downloads/Gemini_Generated_Image_40o97f40o97f40o9-removebg-preview.png" />
+                              <Image url="@../../../photo/Gemini_Generated_Image_40o97f40o97f40o9-removebg-preview.png" />
                            </image>
                         </ImageView>
                         <Label fx:id="ID" layoutX="140.0" layoutY="154.0" text="0001">
@@ -94,20 +90,25 @@
                         <Button fx:id="dashboard_manageClientsBtn" layoutX="12.0" layoutY="375.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="26.0" prefWidth="196.0" text="Manage Clients" />
                         <Button fx:id="dashboard_salesRevenueBtn" layoutX="12.0" layoutY="410.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="26.0" prefWidth="196.0" text="Sales History and Revenue" />
                         <Hyperlink fx:id="signout_link" layoutX="129.0" layoutY="513.0" onAction="#logout" prefHeight="24.0" prefWidth="64.0" text="Sign Out" />
-                        <ImageView fx:id="signout_icon" fitHeight="70.0" fitWidth="69.0" layoutX="54.0" layoutY="490.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="signout_icon" fitHeight="122.0" fitWidth="213.0" layoutX="5.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../../../../Downloads/Gemini_Generated_Image_otd2h6otd2h6otd2-removebg-preview.png" />
+                              <Image url="@../../../photo/Gemini_Generated_Image_s2sdf7s2sdf7s2sd-removebg-preview.png" />
                            </image>
                         </ImageView>
                         <Circle fill="#1fff44" layoutX="109.0" layoutY="138.0" radius="5.0" stroke="#1fff44" strokeType="INSIDE" />
                         <Label layoutX="121.0" layoutY="130.0" text="Active" />
+                        <ImageView fx:id="signout_icon1" fitHeight="62.0" fitWidth="174.0" layoutX="54.0" layoutY="494.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../photo/Gemini_Generated_Image_otd2h6otd2h6otd2-removebg-preview.png" />
+                           </image>
+                        </ImageView>
                      </children>
                   </AnchorPane>
                </left>
                <center>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f2f5f3;" stylesheets="@../../../../../Design/PageDesign.css" BorderPane.alignment="CENTER">
                      <children>
-                        <AnchorPane fx:id="dashboard" prefHeight="569.6" prefWidth="880.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <AnchorPane fx:id="dashboard" prefHeight="569.6" prefWidth="880.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
                               <AnchorPane prefHeight="163.0" prefWidth="850.0" style="-fx-background-color: d4d9d6;" stylesheets="@../../../../../Design/PageDesign.css" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="14.0">
                                  <styleClass>
@@ -288,7 +289,7 @@
                                     </Label>
                                     <Button fx:id="product_updateBtn" layoutX="707.0" layoutY="38.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="62.0" text="Update" />
                                     <Button fx:id="product_importBtn" layoutX="710.0" layoutY="155.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="126.0" text="Import" />
-                                    <Button fx:id="product_addBtn" layoutX="773.0" layoutY="39.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="62.0" text="Add" />
+                                    <Button fx:id="product_addBtn" layoutX="773.0" layoutY="38.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="62.0" text="Add" />
                                     <Button fx:id="product_ClearBtn" layoutX="707.0" layoutY="92.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="62.0" text="Clear" />
                                     <Button fx:id="product_deleteBtn" layoutX="773.0" layoutY="92.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="62.0" text="Delete" />
                                     <TextField fx:id="product_searchPrice" layoutX="536.0" layoutY="155.0" promptText="0.0 euro" />
@@ -313,7 +314,7 @@
                                        </font>
                                     </Label>
                                     <ComboBox fx:id="product_selectByCategory" layoutX="545.0" layoutY="15.0" prefHeight="26.0" prefWidth="152.0" promptText="Category" />
-                                    <TableView layoutX="13.0" layoutY="49.0" prefHeight="254.0" prefWidth="834.0" stylesheets="@../../../../../Design/DashboardDesign.css">
+                                    <TableView fx:id="addProduct_tableView" layoutX="13.0" layoutY="49.0" prefHeight="254.0" prefWidth="834.0" stylesheets="@../../../../../Design/DashboardDesign.css">
                                       <columns>
                                         <TableColumn fx:id="product_medcineId" prefWidth="113.60000610351562" text="Medcine ID" />
                                         <TableColumn fx:id="product_brandName" prefWidth="119.199951171875" text="Brand Name" />
@@ -333,7 +334,7 @@
                               </AnchorPane>
                            </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="employee_page" prefHeight="569.6" prefWidth="880.0" stylesheets="@../../../../../Design/PageDesign.css" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <AnchorPane fx:id="employee_page" prefHeight="569.6" prefWidth="880.0" stylesheets="@../../../../../Design/PageDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
                               <AnchorPane prefHeight="546.0" prefWidth="554.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
                                  <stylesheets>
@@ -346,7 +347,7 @@
                                     <String fx:value="radius" />
                                  </styleClass>
                                  <children>
-                                    <TableView layoutX="12.0" layoutY="63.0" prefHeight="467.0" prefWidth="518.0">
+                                    <TableView fx:id="addEmployee_tableView" layoutX="12.0" layoutY="63.0" prefHeight="467.0" prefWidth="518.0">
                                       <columns>
                                         <TableColumn fx:id="employee_id" prefWidth="75.0" text="ID" />
                                         <TableColumn fx:id="employee_fullName" prefWidth="98.4000015258789" text="Full name" />
